[gd_scene load_steps=3 format=3 uid="uid://hkn13w46xd8m"]

[ext_resource type="Script" uid="uid://x3k83in1llkx" path="res://scripts/ui/move_button.gd" id="1_iikxo"]
[ext_resource type="Theme" uid="uid://dxcbyf3qlsc8k" path="res://assets/themes/golden_button.tres" id="1_ma2pc"]

[node name="MoveButton" type="Button"]
offset_right = 144.0
offset_bottom = 48.0
theme = ExtResource("1_ma2pc")
theme_override_font_sizes/font_size = 16
text = "-"
script = ExtResource("1_iikxo")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
